# genai_evaluator

./: .gitignore  environment.yaml  evaluation_test.ipynb  pyproject.toml  readme.md  tox.ini
clients/: __init__.py  data_clients.py  embedding_client.py  faiss_client.py  llm_clients.py  utils.py  vector_store_client.py
flows/: __init__.py  generation_eval_flow.py  rag_flow.py  retrieval_eval_flow.py
interfaces/: interfaces.py
metrics/: deterministic.py  gen_metrics.py  ret_metrics.py
src/: evaluation_test.ipynb
src/genai_evaluator/clients/: __init__.py  data_clients.py  embedding_client.py  llm_clients.py  utils.py  vector_store_client.py
src/genai_evaluator/flows/: __init__.py  generation_eval_flow.py  rag_flow.py  retrieval_eval_flow.py
src/genai_evaluator/interfaces/: interfaces.py
src/genai_evaluator/metrics/: deterministic.py  gen_metrics.py  metric_type.py  ret_metrics.py
src/genai_evaluator/templates/evaluation/english/: contextual_precision_system.jinja2  contextual_precision_user.jinja2  contextual_recall_system.jinja2  contextual_recall_user.jinja2  faithfulness_extract_system.jinja2  faithfulness_user.jinja2
src/tests/: test_flows.py
templates/evaluation/english/: faithfulness_system.jinja2  precision_system.jinja2  precision_user.jinja2  relevancy_extract_system.jinja2  relevancy_system.jinja2  relevancy_user.jinja2
