[project]
name = "genai_evaluator"
version = "0.1.0"
description = "Evaluation framework for Generative AI applications actually supporting AWS models, Azure OpenAI, and OpenAI APIs."
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "boto3>=1.38.39",
    "docstring-parser>=0.16",
    "jinja2>=3.1.6",
    "levenshtein>=0.27.1",
    "nltk>=3.9.1",
    "openai>=1.88.0",
    "pydantic>=2.11.7",
    "pypdf2>=3.0.1",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
]

[tool.setuptools]
# Explicitly list packages instead of using find-packages
packages = ["genai_evaluator"]
py-modules = [
    "flows",
    "interfaces",
    "clients",
    "metrics",
    "templates",
]

[tool.setuptools.package-dir]
genai_evaluator = "src/genai_evaluator"


[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.2",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Import order
    "I",
]
ignore = [
    #exclude line too long warning
    "E501",
    "D104"
]
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
